bugfix - historicalDataSyncAll transaction committing issue